01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
spec:
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
        - name: guestbook
          image: k8s.gcr.io/guestbook:v3
          ports:
            - containerPort: 3000
