04-redis.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: guestbook-redis
spec:
  selector:
    matchLabels:
      app: guestbook-redis
  serviceName: guestbook-redis
  template:
    metadata:
      labels:
        app: guestbook-redis
    spec:
      containers:
        - name: redis
          image: redis:4-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
spec:
  selector:
    app: guestbook-redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
spec:
  selector:
    app: guestbook-redis
  ports:
    - port: 6379
      targetPort: 6379
