03-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook
spec:
  rules:
    - host: guestbook.myhro.info
      http:
        paths:
          - backend:
              serviceName: guestbook
              servicePort: 3000
